--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -8,7 +8,7 @@
       </p>
     </div>
 
-    <a href="" class="btn btn-outline-dark">Teach on FA</a>
+    <a href="/tutor" class="btn btn-outline-dark">Teach on FA</a>
   </div>
   <div class="companies">
     <h3 class="banner comapnies-txt">
