--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -5,13 +5,16 @@
   <% if (!currentUser) { %>
   <a href="/signin" class="fa-bussiness">Sign In</a>
   <a href="/login" class="tech-on-fa">Login</a>
+
   <% } %> <% if (currentUser) { %>
   <a href="/logout" class="tech-on-fa">Logout</a>
-  <% } %> <% if (currentUser) { %>
   <a href="/show" class="fa-user-learning">My learning</a>
+  <a href="/courses/new">Create course</a>
   <% } %>
+  <a href="/tutor" class="fa-user-learning">Become Tutor</a>
+
   <div class="icons">
-    <img src="/assets/insta.svg" alt="instagram" />
+    <!-- <img src="/assets/insta.svg" alt="instagram" /> -->
     <img src="/assets/linkedin.svg" alt="linkedin" />
     <img src="/assets/dribbble.svg" alt="snapchat" />
     <img src="/assets/my-avatar.png" alt="avatar" />
