--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Error 404-</title>
-  </head>
-  <body>
-    <h1>page not found</h1>
-    <p>ERROR - 404</p>
-  </body>
-</html>
+<% layout("/layouts/boilerplate") %>
+
+<body>
+  <div class="err-pg">
+    <img src="/assets/err-logo.gif" class="err-logo" />
+    <h1 class="err-message">page not found</h1>
+    <p class="err-code">ERROR - 404</p>
+  </div>
+</body>
