--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -5,16 +5,23 @@
     <h1>Sign In</h1>
     <div class="signin-username">
       <label for="username">Username</label>
-      <input type="text" name="username" id="username" placeholder="username" />
+      <input
+        type="text"
+        name="user[username]"
+        id="username"
+        placeholder="username"
+        required
+      />
     </div>
 
     <div class="signin-email">
       <label for="email">Email</label>
       <input
         type="email"
-        name="email"
+        name="user[email]"
         placeholder="examle@mail.com"
         id="email"
+        required
       />
     </div>
 
@@ -22,12 +29,14 @@
       <label for="password">Password</label>
       <input
         type="password"
-        name="password"
+        name="user[password]"
         placeholder="******"
         id="password"
+        required
       />
     </div>
 
+    <input type="text" name="tutor" id="user[role]" style="display: none" />
     <button class="btn">Sign In</button>
   </form>
 </body>
